2015-11-20  Kirit Saelensminde  <kirit@felspar.com>
 Removed use of deprecated Fost APIs.

2015-05-11  Kirit Saelensminde  <kirit@felspar.com>
 Strip out auto_ptr.
 Add a new test so we can check the version of Python we're using.
 Alter the fpython tests so they don't rebuild the host for each one.

2015-05-10  Kirit Saelensminde  <kirit@felspar.com>
 Updated to C++14.

2014-05-29  Kirit Saelensminde  <kirit@felspar.com>
 The user agent now strips any doctype it finds before giving the result to BeautifulSoup to try to clean up.
 Ignore data and mailto URLs when spidering.

2013-10-20  Kirit Saelensminde  <kirit@felspar.com>
 The spider now tries more types of link including script and img elements.

2012-11-07  Kirit Saelensminde  <kirit@felspar.com>
 Fixed an order-of-destruction problem in the in-process Python host that showed up on Ubuntu Quantal/Python 2.7.

2012-04-10  Kirit Saelensminde  <kirit@felspar.com>
 Removed the Fost authentication middleware for Django as this is now a separate pypi package.

2012-03-25  Kirit Saelensminde  <kirit@felspar.com>
 Silenced a clang warning.

2012-01-28  Kirit Saelensminde  <kirit@felspar.com>
 Fixed up some build errors for the new null_ptr.

2011-08-22  Kirit Saelensminde  <kirit@felspar.com>
 Made a couple of default arguments in the user agent (Python) safer.

2011-07-28  Kirit Saelensminde  <kirit@felspar.com>
 Boost 1.46.0 is now properly supported.

2010-06-09  Kirit Saelensminde  <kirit@felspar.com>
 User agent
 - The request data can now be retrieved from the request object.

2010-05-30  Kirit Saelensminde  <kirit@felspar.com>
 Python bindings
 - Added binding for the host class.
 Code layout
 - Changed the layout of the internet Python code.

2010-04-03  Kirit Saelensminde  <kirit@felspar.com>
 Code layout
 - Moved internal headers to a better location

2010-03-29  Kirit Saelensminde  <kirit@felspar.com>
 Internet bindings
 - The user agent body is now returned as a Python string rather than as a